# Commerce-project

./: pyproject.toml
core/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
core/accounts/migrations/: 0001_initial.py  0002_contactinfo_sociallink.py  0003_location.py  0004_communicationwithus.py  0005_alter_communicationwithus_phone.py
core/core/: settings.py  urls.py
core/home/: admin.py  models.py  serializers.py  urls.py  views.py
core/home/migrations/: 0001_initial.py
core/products/: admin.py  models.py  serializers.py  urls.py  views.py
core/products/migrations/: 0001_initial.py  0002_category_product_category.py  0003_category_description.py  0004_alter_category_description.py  0005_productimage.py  0006_remove_category_description_remove_category_name_and_more.py
my-vue-app/: package-lock.json  package.json
my-vue-app/src/: App.vue  main.js  style.css
my-vue-app/src/components/Location/: location.vue
my-vue-app/src/components/contact/: form.vue  formAR.vue  formRU.vue
my-vue-app/src/components/home/: home.vue
my-vue-app/src/components/product/: header.vue
my-vue-app/src/pages/about/: about.vue  aboutAR.vue  aboutRU.vue
my-vue-app/src/pages/category/: category.vue  categoryAR.vue  categoryEN.vue  categoryRU.vue
my-vue-app/src/pages/contactUs/: contactUs.vue  contactUsAR.vue  contactUsEN.vue  contactUsRU.vue
my-vue-app/src/pages/home/: home.vue  homeAR.vue  homeEN.vue  homeRU.vue
my-vue-app/src/pages/products/: products.vue
my-vue-app/src/router/: index.js
my-vue-app/src/services/: languageService.js
(+19 files in other folders)
